--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NuxeCorps-For a better life</title>
     <style>
@@ -74,6 +75,9 @@
         *{
             margin: 0;
             padding: 0;
+        }
+        body{
+            font-family: 'Poppins';
         }
     </style>
 </head>
