--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <body>
     <nav>
         <ul>
-            <li><img id="logo" src="https://cdn.pixabay.com/photo/2016/12/28/08/15/hummingbird-1935665_960_720.png" alt="logo"></li>
+            <li><img id="logo" src="https://www.verywellmind.com/thmb/ciwPFyrIiqaCJ0FFR7dT9LFK99A=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/142019441-56a792635f9b58b7d0ebcaa2.jpg" alt="logo"></li>
             <li><a href="#home" class="link">Home</a></li>
             <li><a href="#about_us"class="link">About Us</a></li>
             <li><a href="#services"class="link">Services</a></li>
