--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <ul>
             <li><img id="logo" src="https://www.verywellmind.com/thmb/ciwPFyrIiqaCJ0FFR7dT9LFK99A=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/142019441-56a792635f9b58b7d0ebcaa2.jpg" alt="logo"></li>
             <li><a href="#home" class="link">Home</a></li>
-            <li><a href="about_us"class="link">About Us</a></li>
+            <li><a href="about_us.html"class="link">About Us</a></li>
             <li><a href="#services"class="link">Services</a></li>
             <li><a href="#contacts"class="link">Contacts</a></li>
             <li style="margin-left: auto;"><a href="#login"class="link">Login</a></li>
